src-tauri/diagnostics.txt
    Checking tauri-appaudio-switcher v0.1.0 (C:\自作プロジェクト\音声出力切り替え\src-tauri)
error[E0433]: failed to resolve: could not find `windows_core` in the list of imported crates
  --> src\audio_manager.rs:68:1
   |
68 | #[windows::core::interface("f8679f50-d128-4fd3-acc1-4471cd697261")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `windows_core` in the list of imported crates
   |
   = note: this error originates in the attribute macro `windows::core::interface` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `VT_LPWSTR` in this scope
  --> src\audio_manager.rs:45:55
   |
45 |                     if prop.anonymous.anonymous.vt == VT_LPWSTR.0 {
   |                                                       ^^^^^^^^^ not found in this scope

warning: unused import: `windows::Win32::System::Com::StructuredStorage::*`
 --> src\audio_manager.rs:5:5
  |
5 | use windows::Win32::System::Com::StructuredStorage::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0425]: cannot find function, tuple struct or tuple variant `PropVariantClear` in this scope
  --> src\audio_manager.rs:51:29
   |
51 |                     let _ = PropVariantClear(&mut prop);
   |                             ^^^^^^^^^^^^^^^^ not found in this scope

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `tauri-appaudio-switcher` (bin "tauri-appaudio-switcher") generated 1 warning
error: could not compile `tauri-appaudio-switcher` (bin "tauri-appaudio-switcher") due to 3 previous errors; 1 warning emitted
